--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta property="og:title" content="Domain for Sale" />
-  <title>Jelliphish | Phish your Org</title>
+  <title>Jelliphish | Gone Phishing</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
@@ -17,9 +17,9 @@
 
   <div class="bg-text">
         <img class="site-title-image" src="img/logo.png?format=500w" alt="Secure your Team">
-    <h1>Secure your teams access to critical systems</h1>
+    <h1>How secure is your teams access to critical systems ?</h1>
     <br>
-    <h2>Offensive Security</h2><br>
+    <h2>Let's find out!</h2><br>
     <p></p>
   </div>
 
